[tool.poetry]
name = "checker"
version = "0.1.0"
description = ""
authors = ["Acetonerer <bolokan2014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.1.1"
aiohttp = "3.10.5"
asyncio = "3.4.3"
aiohappyeyeballs = "2.4.0"
aiosignal = "1.3.1"
asgiref = "3.8.1"
attrs = "24.2.0"
build = "1.2.2"
cachecontrol = "0.14.0"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.8"
dulwich = "0.21.7"
fastjsonschema = "2.20.0"
filelock = "3.16.1"
frozenlist = "1.4.1"
idna = "3.10"
importlib-metadata = "8.5.0"
installer = "0.7.0"
jaraco-classes = "3.4.0"
keyring = "24.3.1"
more-itertools = "10.5.0"
msgpack = "1.1.0"
multidict = "6.1.0"
packaging = "24.1"
pexpect = "4.9.0"
pkginfo = "1.11.1"
platformdirs = "4.3.6"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
ptyprocess = "0.7.0"
pyproject-hooks = "1.1.0"
pywin32-ctypes = "0.2.3"
rapidfuzz = "3.10.0"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
sqlparse = "0.5.1"
tomlkit = "0.13.2"
trove-classifiers = "2024.9.12"
tzdata = "2024.2"
urllib3 = "2.2.3"
virtualenv = "20.26.5"
yarl = "1.12.1"
zipp = "3.20.2"
psycopg2 = "2.9.9"
coverage = "7.6.1"
iniconfig = "2.0.0"
pluggy = "1.5.0"
pytest = "8.3.3"
pytest-cov = "5.0.0"
pytest-django = "4.9.0"
pytest-mock = "3.14.0"
python-dotenv = "1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"
coverage = "^7.6.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "link_checker.settings"
python_files = "tests/test_*.py"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
